# blog

./: Cargo.toml  README.md  clean_blog_headers.py  config.toml  port_blog.py
content/: _index.md
content/blog/: 2014-resolutions.md  60-seconds-tracer-style-time-travel.md  60-seconds-tracer-style-time-travel.mdx  750-words-per-day.md  _index.md  a-message-from-our-sponsors.mdx  a-place-for-nosql.md  a-place-for-nosql.mdx  a-plan-of-action-thinking-critically-and-reasoning-scientifically-to-derive-a-path-forward.md  a-playable-demo.md  a-political-diatribe-and-the-state-of-2017.md  a-strange-thing-happened.mdx  academic-lamentation.md  ad-blocking-test.md  admob-and-unity-3d.md  admob-mobfox-and-amazon-associates.mdx  aesthetic-update.md  ai-is-not-dead.md  aij.md  ambient-terror.md  an-analysis-of-one-million-sentence-chunks.mdx  android-development-fitting-things-together.md  android-development-fitting-things-together.mdx  android-permission-gotcha.md  are-we-there-yet.mdx  assembly-and-cpu-design.mdx  auto-bob-ross-ize.md  auto-bob-ross-ize.mdx  auto-ross-ize-revisited.md  automatic-differentiation.md  automatically-generating-pokemon.md  bottlepy-and-gunicorn.md  bottlepy-and-gunicorn.mdx  building-a-gdnative-library-on-windows.md  building-a-gdnative-library-on-windows.mdx  catpicture.mdx  change.md  change.mdx  character-development-ross.md  checking-fuse-colors.md  (+207 more)
content/blog_archive/: 60-seconds-tracer-style-time-travel.md  750-words-per-day.md  BROKEN_LINKS.txt  _index.md  a-message-from-our-sponsors.md  a-playable-demo.md  a-strange-thing-happened.md  admob-and-unity-3d.md  admob-mobfox-and-amazon-associates.md  aesthetic-update.md  ai-is-not-dead.md  aij.md  an-analysis-of-one-million-sentence-chunks.md  android-permission-gotcha.md  are-we-there-yet.md  assembly-and-cpu-design.md  auto-bob-ross-ize.md  catpicture.md  checking-fuse-colors.md  collision-detection.md  compressed-representation-a-really-good-idea.md  conjecture.md  dad-mom-has-dead.md  (+70 more)
src/: app.rs  datamodel.rs  lib.rs  main.rs  post.rs  serve.rs  serve_salvo.rs
static/: keybase.txt
style/: main.css
templates/: blog.html  index.html  three_pane_layout.html
(+12 files in other folders)
