[package]
name = "website"
version = "0.1.0"
edition = "2021"

[lib]
name="website"
crate-type = ["cdylib", "rlib"]

[[bin]]
name="serve"
path="src/serve.rs"

[dependencies]
pulldown-cmark = { version = "0.12.1", features = ["simd"] }
rusqlite = { version = "0.32.1", features = ["bundled", "functions", "blob", "serde_json", "array"] }
salvo = { version = "0.72.4", features = ["cookie", "server", "http1", "http2", "quinn", "test", "acme", "rustls"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

