[package]
name = "website"
version = "0.1.0"
edition = "2021"

[lib]
name="website"
crate-type = ["cdylib", "rlib"]

[[bin]]
name="serve_salvo"
path= "src/serve_salvo.rs"
required-features = ["servesalvo"]

#[[bin]]
#name="serve_dioxus"
#path= "src/serve_dioxus.rs"
#required-features = ["servedioxus"]


[dependencies]
anyhow = "*"
#jwt-simple = "~0.12"
pulldown-cmark = { version = "0.12.1", features = ["simd"] }
rusqlite = { version = "0.32.1", features = ["bundled", "functions", "blob", "serde_json", "array"] }
tokio = { version = "~1.41", features = ["full", "macros"] }
tracing = "~0.1"
tracing-subscriber = "~0.3"
serde = { version = "~1.0", features = ["derive"] }
# servedioxus
#dioxus = { version = "0.5.6", features = ["fullstack", "router"], optional = true }
#axum = { version = "0.7.9", optional = true }
# servesalvo
handlebars = { version = "~6.2", optional = true }
salvo = { version = "~0.74", features = ["cookie", "server", "http1", "http2", "quinn", "test", "acme", "rustls", "oapi"], optional = true }

[features]
default = ["salvo", "handlebars"]
servesalvo = ["salvo", "handlebars"]
#servedioxus = ["dioxus", "axum",]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

